# CMakeList.txt : CMake project for octocat-warrior, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("octocat-warrior")

# Add source to this project's executable.
add_executable (octocat-warrior "octocat-warrior.cpp" "octocat-warrior.h")

# TODO: Add tests and install targets if needed.
